# collisions

./: asset-manifest.json  build-rust.sh  build-ui.sh  index.html
docs/: asset-manifest.json  index.html
docs/static/css/: main.2f33984d.css
docs/static/js/: main.fedfd40e.js  main.fedfd40e.js.map
docs/static/media/: collisions_src_bg.e12b361115b7b82a3f69.wasm
rust-src/: Cargo.toml
rust-src/src/: barnes_hut.rs  lib.rs  particle.rs  quad_tree.rs  rectangle.rs  serialization.rs  shared_memory.rs  utils.rs
static/css/: main.2f33984d.css.map
static/js/: main.68be27a3.js  main.68be27a3.js.map  main.cde19e34.js  main.cde19e34.js.map
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js  BarnesHutJavascriptSimpleElasticCollision.js  NaiveJavascript.js  NaiveJavascriptNoCollision.js  NaiveJavascriptSimpleElastic.js  NaiveJavascriptSimpleElasticCollision.js  NaiveRustImprovedSimpleElasticCollision.js  NaiveRustSimpleElasticCollision.js  RustNoCollision.js  utils.js
ui/src/Dashboard/: index.js  styles.css
ui/src/Scene/: Dashboard.js
ui/src/javascript/: BarnesHutJavascriptSimpleElasticCollision.js  NaiveJavascriptNoCollision.js  NaiveJavascriptSimpleElasticCollision.js  styles.css
ui/src/scenarios/javascript/: JavascriptBarnesHut.js  JavascriptNaive.js  JavascriptNoCollision.js
ui/src/scenarios/rust/: RustBarnesHut.js  RustNaive.js  RustPlusNaive.js
ui/src/utils/: QuadTree.js  Rectangle.js  index.js
